[package]
name = "qjsonrs"
version = "0.1.0-dev"
authors = ["Marcus Ewert <marcus.ewert@mixpanel.com>"]
license = "MIT"
edition = "2018"
description = "Streaming JSON Tokenizer."
repository = "https://github.com/sarum90/qjsonrs"
readme = "README.md"

[dependencies]

[dev-dependencies]
serde_json = "1.0"
hamcrest2 = "0.2.3"
os_pipe = "0.8.0"
matches = "0.1.8"
