[package]
name = "qjsonrs"
version = "0.1.1-dev"
authors = ["Marcus Ewert <marcus.ewert@mixpanel.com>"]
license = "MIT"
edition = "2021"
description = "Streaming JSON Tokenizer."
repository = "https://github.com/sarum90/qjsonrs"
readme = "README.md"

[dependencies]

[dev-dependencies]
serde_json = "1.0.111"
hamcrest2 = "0.3.0"
os_pipe = "1.1.5"
matches = "0.1.8"
